tests/tooling/fixtures/native/execution/positive/nil_literal_basic.objc3
module NilLiteralBasic;

let seed = nil;

fn main() -> i32 {
  let x = seed + 3;
  return x;
}
