tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_expression_let_init_extern.objc3
module MisplacedQualifierExpressionLetInitExtern;

fn main() -> i32 {
  let seed = 1;
  let rhs = extern;
  return seed;
}